--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Online English Academy</title>
+    <link rel='icon' href='../src/images/favicon.ico' type='image/x-icon' />
   </head>
   <body>
     <div id="root"></div>
